--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "prismjs": "^1.20.0",
     "qs": "^6.9.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
