--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@kangc/v-md-editor": "^1.2.10",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
     "prismjs": "^1.20.0",
     "qs": "^6.9.3",
